# 2026-rebuilt

./: .deployignore  .gitignore  CLAUDE.md  README.md  TUNING.md  WIRING.md  climber testing  pyproject.toml  robot.py  robot_config.py  robotcontainer.py  simgui-ds.json  tuner-project.json
.wpilib/: wpilib_preferences.json
controls/powerdistribution/: PowerDistributionHelper.py
subsystems/: climber.py  feeder.py  feeeder.py  launcher.py  launcher_config.py  pose_estimator.py  vision.py
subsystems/intake/: intake.py  intake_arm.py
telemetry/: __init__.py  mechanism_telemetry.py  swerve_telemetry.py  telemetry.py
telemetry/powerdistribution/: PowerDistributionHelper.py  PowerDistributionNT.py
tests/: conftest.py  pyfrc_test.py
