#
# Use this configuration file to control what RobotPy packages are installed
# on your RoboRIO
#

[project]
name = "swerve-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "robotpy[commands2,sim]~=2026.1",
    "phoenix6~=26.1",
]

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2026.2.1.1"

# Which core WPILib components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
components = [
    # "all",
    # "apriltag",
    "commands2",
    # "cscore",
    # "romi",
    # "sim",
    # "xrp",
]

# Other pip packages to install (including vendor packages)
requires = [
    "phoenix6~=26.1",
    # "photonlibpy",
    # "robotpy-ctre",  # Phoenix 5
    # "robotpy-navx",
    # "robotpy-pathplannerlib",
    # "robotpy-playingwithfusion",
    # "robotpy-rev",
]
